--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Cloudflare Pages
 
 on:
   push:
-    branches: 'main'
+    branches: 'feature/cloudflare'
   pull_request:
     branches: 'main'
 
