--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "homelab-pages"
 compatibility_date = "2024-01-01"
+pages_build_output_dir = ".svelte-kit/cloudflare"
 
 # Custom domain configuration
 [env.production]
