--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,16 @@
-name: Deploy to GitHub Pages
+name: Deploy to Cloudflare Pages
 
-on:
-  push:
-    branches: 'main'
+on: [push]
 
 jobs:
-  build_site:
+  build:
+    name: Deploy
+    permissions:
+      contents: read
+      deployments: write
     runs-on: ubuntu-latest
     steps:
+     
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -25,29 +28,13 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: build
-        env:
-          BASE_PATH: '/${{ github.event.repository.name }}'
-        run: |
-          pnpm run build
-      - name: Upload Artifacts
-        uses: actions/upload-pages-artifact@v3
+      - name: Build
+        run: pnpm run build
+
+      - name: Deploy to Cloudflare Pages
+        uses: cloudflare/wrangler-action@v3
         with:
-          path: 'build/'
-
-  deploy:
-    needs: build_site
-    runs-on: ubuntu-latest
-
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    steps:
-      - name: Deploy
-        id: deployment
-        uses: actions/deploy-pages@v4
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          command: pages deploy --commit-dirty=true
