--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
     permissions:
       contents: read
       deployments: write
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
      
       - name: Checkout
